--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pyromod==1.5
 pymongo
 dnspython
 # --- For-Web-Response ------- #
-Flask==2.2.2
+Flask==1.1.4
+Werkzeug==2.0.0
 gunicorn==20.1.0
 aiohttp<3.8.0,>=3.7.4
