--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pymongo
 dnspython
 # --- For-Web-Response ------- #
 Flask==2.0.0
-Werkzeug==1.0.1
+Werkzeug
 gunicorn==20.1.0
 aiohttp<3.8.0,>=3.7.4
 markupsafe==2.1.0
